# Mngr

./: .cproject  CMakeLists.txt
client/: main.cc
components/: CMakeLists.txt
components/DevFunctions/: CMakeLists.txt
components/DevFunctions/SimpleFunc/: CMakeLists.txt
components/DevFunctions/SimpleFunc/includes/: SimpleFunc.h
components/DevFunctions/SimpleFunc/src/: SimpleFunc.cc
components/DevFunctions/SimpleFunc/test/: SimpleFuncTest.cc
components/ErrorManager/: CMakeLists.txt
components/ErrorManager/includes/: ErrorManager.h
components/ErrorManager/src/: ErrorManager.cc
components/ErrorManager/test/: ErrorManagerTest.cc
components/ProgramManager/: CMakeLists.txt
components/ProgramManager/includes/: ProgramManager.h
components/ProgramManager/src/: ProgramManager.cc
components/ProgramManager/test/: ProgramManagerTest.cc
framework/: CMakeLists.txt
framework/app/: CMakeLists.txt
framework/app/includes/: app.h
framework/app/src/: app.cc
framework/app/test/: AppTest.cc
server/: main.cc
src/: main.cc
